--- a/lang/pt.json
+++ b/lang/pt.json
@@ -7,27 +7,27 @@
     "online": "/me %%BOTNAME%% v%%VERSION%% online!",
 
 
-    "welcome": "Bem vindo(a), %%NAME%%",
+    "welcome": "Bem vindo(a) %%NAME%% seu gostosão",
     "welcomeback": "Bem vindo(a) de volta, %%NAME%%",
-    "songknown": "/me :repeat: Essa música foi tocada %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás. :repeat:",
-    "timelimit": "@%%NAME%%, sua música tem duração maior que %%MAXLENGTH%% minutos. Você precisa de permissão para tocar músicas longas.",
-    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar música de própria autoria!",
+    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás. :repeat:",
+    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos. Você precisa de permissão para tocar algo longo PORRA.",
+    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
     "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
 
-    "isopen": "/me A roleta foi iniciada! Use !join para participar!",
-    "winnerpicked": "/me Um vencedor foi escolhido! @%%NAME%% ganhou a posição %%POSITION%%.",
+    "isopen": "/me A roleta COMEÇOU CARALHO! Use !join para entrar nessa PORRA!",
+    "winnerpicked": "/me UM FILHO DA PUTA FOI ESCOLHIDO! @%%NAME%% ganhou a posição %%POSITION%% todos comam o cu dele.",
 
 
     "alreadyadding": "/me Usuário já está sendo adicionado! Posição desejada alterada para %%POSITION%%.",
     "adding": "/me @%%NAME%% foi adicionado à fila. Posição atual: %%POSITION%%.",
 
 
-    "usernotfound": "/me Usuário não encontrado.",
-    "notdisconnected": "/me @%%NAME%% não tem se desconectado durante meu tempo aqui.",
+    "usernotfound": "/me Zé Bostola não encontrado.",
+    "notdisconnected": "/me @%%NAME%% não caiu quando estive nesse caraio.",
     "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
-    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás: %%TIME%%.",
-    "valid": "/me @%%NAME%% desconectou-se %%TIME%% atrás e deve ter posição %%POSITION%%.",
+    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás PORRA: %%TIME%%.",
+    "valid": "/me @%%NAME%% caiu a %%TIME%% atrás e deve ter posição %%POSITION%%.",
 
 
     "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
@@ -35,11 +35,11 @@
     "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
 
 
-    "caps": "@%%NAME%%, desligue seu capslock, por favor.",
-    "askskip": "@%%NAME%%, não peça skips.",
-    "spam": "/me @%%NAME%%, não faça spam, por favor.",
-    "roomadvertising": "@%%NAME%%, não poste link de outras comunidades, por favor.",
-    "adfly": "@%%NAME%%, por favor mude seu script autowoot. Nós sugerimos plugCubed: http://plugcubed.net/",
+    "caps": "@%%NAME%%, desligue seu capslock, filho da puta.",
+    "askskip": "@%%NAME%%, não peça para pular PORRA.",
+    "spam": "/me @%%NAME%%, não faça spam, PORRA.",
+    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE FILHO DA PUTA.",
+    "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
 
 
     "invalidtime": "/me [@%%NAME%%] Tempo inválido.",
@@ -65,35 +65,35 @@
     "lockguard": "lockguard",
     "usercommands": "comandos de usuário",
     "motd": "MotD",
-    "welcomemsg": "mensagem de boas vindas",
+    "welcomemsg": "mensagem de boas vindas para novas bichas",
     "songstats": "estatísticas de música",
     "etarestriction": "restrição de eta",
     "activeusersintime": "/me [@%%NAME%%] %%AMOUNT%% usuários estiveram ativos nos últimos %%TIME%% minutos.",
     "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
     "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
     "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
-    "autowoot": "/me Nós recomendamos plugCubed para autowoot: http://plugcubed.net/",
-    "brandambassador": "/me Um Embaixador de Marca é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
+    "autowoot": "/me Nós recomendamos o Origem Woot http://goo.gl/iubHkn",
+    "brandambassador": "/me Um Embaixador é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
     "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Bouncer+.",
-    "chatcleared": "/me [@%%NAME%%] O chat foi limpo.",
-    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo.",
+    "chatcleared": "/me [@%%NAME%%] O chat foi limpo com o cu de algum vassilau.",
+    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
     "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
-    "eatcookie": "/me ama cookies.",
-    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse cookie sozinho.",
+    "eatcookie": "/me ama biscoitos esse arrombado.",
+    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse biscoito sozinho.",
     "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
     "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
     "emojilist": "/me Emojis: %%LINK%%",
     "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
-    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%%.",
-    "facebook": "/me Curta nossa página no Facebook: %%LINK%%",
+    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%% nessa bagaça.",
+    "facebook": "/me Curta nossa a porra da nossa página no Facebook: %%LINK%%",
     "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj: %%LINK%%",
     "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para sair da mesma.)",
-    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve na sala por %%TIME%%.",
+    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve nessa delicia por %%TIME%%.",
     "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
     "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
-    "kill": "/me Desligando...",
+    "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...",
     "rouletteleave": "/me @%%NAME%% deixou a roleta!",
     "songlink": "/me [@%%NAME%%] Link para a música atual: %%LINK%%",
     "usedlockskip": "/me [%%NAME%% usou 'lockskip'.]",
@@ -103,19 +103,19 @@
     "motdset": "/me Mensagem do Dia:  %%MSG%%",
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, por favor.",
-    "move": "/me [%%NAME%% usou 'move'.]",
+    "move": "/me [%%NAME%% usou 'move', é super efetivo.]",
     "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
-    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mudar até no máximo %%TIME%% minutos.",
+    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
     "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s).",
     "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado.",
     "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior.",
     "oplist": "/me Lista OP: %%LINK%%",
-    "pong": "/me Pong!",
-    "reload": "/me Reiniciando...",
-    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na fila de espera.",
+    "pong": "/me Pong NO TEU CU SEU FILHO DA PUTA!",
+    "reload": "/me Reiniciando, mas primeiro vou dar o cu...",
+    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
     "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip'.]",
+    "skip": "/me [%%NAME%% usou 'skip', é super efetivo.]",
     "madeby": "/me Este bot foi feito por %%NAME%%.",
     "activefor": "Estive online por %%TIME%%.",
     "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
