--- a/lang/en.json
+++ b/lang/en.json
@@ -1,136 +1,137 @@
 {
-
-    "nodatafound": "No previous data found.",
-    "retrievingdata": "Retrieving previously stored data.",
-    "datarestored": "Previously stored data successfully retrieved.",
-    "greyuser": "Only bouncers and up can run a bot.",
-    "bouncer": "The bot can't move people when it's run as a bouncer.",
+    
+    "nodatafound": "Dados anteriores não encontrados nessa porra.",
+    "retrievingdata": "Recuperando dados armazenados anteriormente. karaio",
+    "datarestored": "Dados armazenados anteriormente recuperados com êxito.",
+    "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot.",
+    "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um bouncer.",
     "online": "/me %%BOTNAME%% v%%VERSION%% online!",
 
 
-    "welcome": "/me Welcome %%NAME%%",
-    "welcomeback": "/me Welcome back, %%NAME%%",
-    "songknown": "/me :repeat: This song has been played %%PLAYS%% time(s) in the last %%TIMETOTAL%%, last play was %%LASTTIME%% ago. :repeat:",
-    "timelimit": "/me @%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
-    "permissionownsong": "/me :up: @%%NAME%% has permission to play their own production!",
-    "isblacklisted": "/me This track is on the %%BLACKLIST%% blacklist! Skipping...",
+    "welcome": "Bem vindo(a) %%NAME%% seu gostosão",
+    "welcomeback": "Bem vindo(a) de volta, %%NAME%%",
+    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás. :repeat:",
+    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos. Você precisa de permissão para tocar algo longo PORRA.",
+    "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
+    "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
 
-    "isopen": "/me The roulette is now open! Type !join to participate!",
-    "winnerpicked": "/me A winner has been picked! @%%NAME%% to position %%POSITION%%.",
+    "isopen": "/me A roleta COMEÇOU CARALHO! Use !join para entrar nessa PORRA!",
+    "winnerpicked": "/me UM FILHO DA PUTA FOI ESCOLHIDO! @%%NAME%% ganhou a posição %%POSITION%% todos comam o cu dele.",
 
 
-    "alreadyadding": "/me User is already being added! Changed the desired position to %%POSITION%%.",
-    "adding": "/me Added @%%NAME%% to the queue. Current queue: %%POSITION%%.",
+    "alreadyadding": "/me Usuário já está sendo adicionado! Posição desejada alterada para %%POSITION%%.",
+    "adding": "/me @%%NAME%% foi adicionado à fila. Posição atual: %%POSITION%%.",
 
 
-    "usernotfound": "/me User not found.",
-    "notdisconnected": "/me @%%NAME%% did not disconnect during my time here.",
-    "noposition": "/me No last position known. The waitlist needs to update at least once to register a user's last position.",
-    "toolongago": "/me @%%NAME%%'s last disconnect (DC or leave) was too long ago: %%TIME%%.",
-    "valid": "/me @%%NAME%% disconnected %%TIME%% ago and should be at position %%POSITION%%.",
+    "usernotfound": "/me Zé Bostola não encontrado.",
+    "notdisconnected": "/me @%%NAME%% não caiu quando estive nesse caraio.",
+    "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
+    "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás PORRA: %%TIME%%.",
+    "valid": "/me @%%NAME%% caiu a %%TIME%% atrás e deve ter posição %%POSITION%%.",
 
 
-    "warning1": "/me @%%NAME%%, you have been afk for %%TIME%%, please respond within 2 minutes or you will be removed.",
-    "warning2": "/me @%%NAME%%, you will be removed due to AFK soon if you don't respond.",
-    "afkremove": "/me @%%NAME%%, you have been removed for being afk for %%TIME%%. You were at position %%POSITION%%. Chat at least once every %%MAXIMUMAFK%% minutes if you want to play a song.",
+    "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
+    "warning2": "@%%NAME%%, você será removido em breve por inatividade se não responder.",
+    "afkremove": "@%%NAME%%, você foi removido por estar inativo por %%TIME%%. Você teve a posição %%POSITION%%. Use o chat pelo menos uma vez em 1 hora se quiser tocar.",
 
 
-    "caps": "/me @%%NAME%%, unglue your capslock button please.",
-    "askskip": "/me @%%NAME%%, don't ask for skips.",
-    "spam": "/me @%%NAME%%, please don't spam.",
-    "roomadvertising": "/me @%%NAME%%, don't post links to other rooms please.",
-    "adfly": "/me @%%NAME%%, please change your autowoot program. We suggest PlugCubed: http://plugcubed.net/",
+    "caps": "@%%NAME%%, desligue seu capslock, filho da puta.",
+    "askskip": "@%%NAME%%, não peça para pular PORRA.",
+    "spam": "/me @%%NAME%%, não faça spam, PORRA.",
+    "roomadvertising": "@%%NAME%%, POSTA ESSE LINK, NO CU DA ARROMBADA DA TUA MÃE FILHO DA PUTA.",
+    "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
 
 
-    "invalidtime": "/me [@%%NAME%%] Invalid time specified.",
-    "nouserspecified": "/me [@%%NAME%%] No user specified.",
-    "invaliduserspecified": "/me [@%%NAME%%] Invalid user specified.",
-    "nolistspecified": "/me [@%%NAME%%] No list specified.",
-    "invalidlistspecified": "/me [@%%NAME%%] Invalid list specified.",
-    "novaliduserspecified": "/me [@%%NAME%%] No valid user specified.",
-    "nolimitspecified": "/me [@%%NAME%%] No limit specified.",
-    "invalidlimitspecified": "/me [@%%NAME%%] Invalid limit.",
-    "invalidpositionspecified": "/me [@%%NAME%%] Invalid position specified.",
-    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% enabled.",
-    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% disabled.",
-    "afkremoval": "AFK removal",
-    "afksremoved": "AFK's removed",
-    "afklimit": "AFK limit",
+    "invalidtime": "/me [@%%NAME%%] Tempo inválido.",
+    "nouserspecified": "/me [@%%NAME%%] Usuário não especificado.",
+    "invaliduserspecified": "/me [@%%NAME%%] Usuário inválido.",
+    "nolistspecified": "/me [@%%NAME%%] Lista não especificada.",
+    "invalidlistspecified": "/me [@%%NAME%%] Lista inválida.",
+    "novaliduserspecified": "/me [@%%NAME%%] Usuário especificado não válido.",
+    "nolimitspecified": "/me [@%%NAME%%] Limite não especificado.",
+    "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido.",
+    "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida.",
+    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado.",
+    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado.",
+    "afkremoval": "Remoção de AFK",
+    "afksremoved": "AFKs removidos",
+    "afklimit": "Limite AFK",
     "autoskip": "autoskip",
-    "newblacklisted": "/me [@%%NAME%%] This track belongs on the %%BLACKLIST%% blacklist! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
+    "newblacklisted": "/me [@%%NAME%%] Essa música está na lista negra %%BLACKLIST%%! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
     "cycleguard": "cycleguard",
     "timeguard": "timeguard",
     "chatfilter": "chatfilter",
     "lockdown": "lockdown",
     "lockguard": "lockguard",
-    "usercommands": "usercommands",
+    "usercommands": "comandos de usuário",
     "motd": "MotD",
-    "welcomemsg": "welcome message",
-    "songstats": "song statistics",
-    "etarestriction": "eta restriction",
-    "activeusersintime": "/me [@%%NAME%% There have been %%AMOUNT%% users chatting in the past %%TIME%% minutes.",
-    "maximumafktimeset": "/me [@%%NAME%%] Maximum afk duration set to %%TIME%% minutes.",
-    "afkstatusreset": "/me [@%%NAME%%] Reset the afk status of @%%USERNAME%%.",
-    "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% has been inactive for %%TIME%%.",
-    "autowoot": "/me We recommend PlugCubed for autowooting: http://plugcubed.net/",
-    "brandambassador": "/me A Brand Ambassador is the voice of the plug.dj users. They promote events, engage the community and share the plug.dj message around the world. For more info: http://blog.plug.dj/brand-ambassadors/",
-    "bouncerplusrank": "/me [@%%NAME%%] You have to be manager or up to enable Bouncer+.",
-    "chatcleared": "/me [@%%NAME%%] Cleared the chat.",
-    "deletechat": "/me [@%%NAME%%] Cleared the chat of %%USERNAME%%.",
-    "commandslink": "/me %%BOTNAME%% commands: %%LINK%%",
-    "eatcookie": "/me eats a cookie.",
-    "nousercookie": "/em doesn't see %%NAME%% in room and eats a cookie himself.",
-    "selfcookie": "/me @%%NAME%%, you're a bit greedy, aren't you? Giving cookies to yourself, bah. Share some with other people!",
+    "welcomemsg": "mensagem de boas vindas para novas bichas",
+    "songstats": "estatísticas de música",
+    "etarestriction": "restrição de eta",
+    "activeusersintime": "/me [@%%NAME%%] %%AMOUNT%% usuários estiveram ativos nos últimos %%TIME%% minutos.",
+    "maximumafktimeset": "/me [@%%NAME%%] Duração máxima de AFK agora é: %%TIME%% minutos.",
+    "afkstatusreset": "/me [@%%NAME%%] Status AFK resetado: @%%USERNAME%%.",
+    "inactivefor": "/me [@%%NAME%%] @%%USERNAME%% esteve inativo por %%TIME%%.",
+    "autowoot": "/me Nós recomendamos o Origem Woot http://goo.gl/iubHkn",
+    "brandambassador": "/me Um Embaixador é a voz dos usuários da plug.dj. Eles promovem eventos, ajudam as comunidades e divulgam a plug.dj para todo o mundod. Mais info: http://blog.plug.dj/brand-ambassadors/",
+    "bouncerplusrank": "/me [@%%NAME%%] Você precisa ser Coordenador ou superior para ativar o Bouncer+.",
+    "chatcleared": "/me [@%%NAME%%] O chat foi limpo com o cu de algum vassilau.",
+    "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
+    "commandslink": "/me Comandos do %%BOTNAME%%: %%LINK%%",
+    "eatcookie": "/me ama biscoitos esse arrombado.",
+    "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse biscoito sozinho.",
+    "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
-    "cycleguardtime": "/me [@%%NAME%%] The cycleguard is set to %%TIME%% minute(s).",
-    "dclookuprank": "/me [@%%NAME%%] Only bouncers and above can do a lookup for others.",
-    "emojilist": "/me Emoji list: %%LINK%%",
-    "notinwaitlist": "/me @%%NAME%%, you are not on the waitlist.",
-    "eta": "/me @%%NAME%% you will reach the booth in approximately %%TIME%%.",
-    "facebook": "/me Like us on facebook: %%LINK%%",
-    "starterhelp": "/me This image will get you started on plug: %%LINK%%",
-    "roulettejoin": "/me @%%NAME%% joined the roulette! (!leave if you regret it.)",
-    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% has been in the room for %%TIME%%.",
-    "kickrank": "/me [@%%NAME%%] you can't kick users with an equal or higher rank than you!",
-    "kick": "/me [@%%NAME%%], @%%USERNAME%% you are being kicked from the community for %%TIME%% minutes.",
-    "kill": "/me Shutting down.",
-    "rouletteleave": "/me @%%NAME%% left the roulette!",
-    "songlink": "/me [@%%NAME%%] Link to current song: %%LINK%%",
-    "usedlockskip": "/me [%%NAME%% used lockskip.]",
-    "lockskippos": "/me [@%%NAME%%] Lockskip will now move the dj to position %%POSITION%%.",
-    "lockguardtime": "/me [@%%NAME%%] The lockguard is set to %%TIME%% minute(s).",
-    "maxlengthtime": "/me [@%%NAME%%] The maximum song duration is set to %%TIME%% minutes.",
-    "motdset": "/me MotD set to:  %%MSG%%",
-    "motdintervalset": "/me MotD interval set to %%INTERVAL%%.",
-    "addbotwaitlist": "/me @%%NAME%%, don't try to add me to the waitlist, please.",
-    "move": "/me [%%NAME%% used move.]",
-    "mutednotime": "/me [@%%NAME%%] Muted @%%USERNAME%%.",
-    "mutedmaxtime": "/me [@%%NAME%%] You can only mute for maximum %%TIME%% minutes.",
-    "mutedtime": "/me [@%%NAME%%] Muted @%%USERNAME%% for %%TIME%% minutes.",
-    "unmuted": "/me [@%%NAME%%] Unmuted @%%USERNAME%%.",
-    "muterank": "/me [@%%NAME%%] You can't mute persons with an equal or higher rank than you.",
-    "oplist": "/me OP list: %%LINK%%",
-    "pong": "/me Pong!",
-    "reload": "/me Be right back.",
-    "removenotinwl": "/me [@%%NAME%%] Specified user @%%USERNAME%% is not in the waitlist.",
-    "roomrules": "/me Please find the room rules here: %%LINK%%",
+    "cycleguardtime": "/me [@%%NAME%%] A proteção de ciclo agora é: %%TIME%% minuto(s).",
+    "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
+    "emojilist": "/me Emojis: %%LINK%%",
+    "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
+    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%% nessa bagaça.",
+    "facebook": "/me Curta nossa a porra da nossa página no Facebook: %%LINK%%",
+    "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj: %%LINK%%",
+    "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para sair da mesma.)",
+    "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve nessa delicia por %%TIME%%.",
+    "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
+    "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
+    "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...",
+    "rouletteleave": "/me @%%NAME%% deixou a roleta!",
+    "songlink": "/me [@%%NAME%%] Link para a música atual: %%LINK%%",
+    "usedlockskip": "/me [%%NAME%% usou 'lockskip'.]",
+    "lockskippos": "/me [@%%NAME%%] Lockskip está agora movendo para a posição %%POSITION%%.",
+    "lockguardtime": "/me [@%%NAME%%] A proteção de travamento agora é %%TIME%% minuto(s).",
+    "maxlengthtime": "/me [@%%NAME%%] A duração máxima de tempo agora é %%TIME%% minutos.",
+    "motdset": "/me Mensagem do Dia:  %%MSG%%",
+    "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
+    "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, por favor.",
+    "move": "/me [%%NAME%% usou 'move', é super efetivo.]",
+    "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
+    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
+    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s).",
+    "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado.",
+    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior.",
+    "oplist": "/me Lista OP: %%LINK%%",
+    "pong": "/me Pong NO TEU CU SEU FILHO DA PUTA!",
+    "reload": "/me Reiniciando, mas primeiro vou dar o cu...",
+    "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
+    "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% used skip.]",
-    "madeby": "/me This bot was made by %%NAME%%.",
-    "activefor": "I have been active for %%TIME%%.",
-    "swapinvalid": "/me [@%%NAME%%] Invalid user specified. (No names with spaces!)",
-    "swapwlonly": "/me [@%%NAME%%] Please only swap users that are in the waitlist!",
-    "swapping": "/me Swapping %%NAME1%% with %%NAME2%%.",
-    "genres": "/me Please find the permissible room genres here: %%LINK%%",
-    "notbanned": "/me [@%%NAME%%] The user was not banned.",
-    "unmutedeveryone": "/me [@%%NAME%%] Unmuted everyone.",
-    "unmuteeveryonerank": "/me [@%%NAME%%] Only managers and up can unmute everyone at once.",
-    "notmuted": "/me [@%%NAME%%] that user wasn't muted.",
-    "unmuterank": "/me [@%%NAME%%] You can't unmute persons with an equal or higher rank than you.",
-    "commandscd": "/me [@%%NAME%%] The cooldown for commands by users is now set to %%TIME%% seconds.",
+    "skip": "/me [%%NAME%% usou 'skip', é super efetivo.]",
+    "madeby": "/me Este bot foi feito por %%NAME%%.",
+    "activefor": "Estive online por %%TIME%%.",
+    "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
+    "swapwlonly": "/me [@%%NAME%%] Use !swap somente com usuários que estão na fila de espera.",
+    "swapping": "/me Trocando posições: %%NAME1%% com %%NAME2%%.",
+    "genres": "/me Encontre os gêneros permitidos aqui: %%LINK%%",
+    "notbanned": "/me [@%%NAME%%] Usuário mencionado não foi banido.",
+    "unmutedeveryone": "/me [@%%NAME%%] Todos foram desmutados.",
+    "unmuteeveryonerank": "/me [@%%NAME%%] Somente Coordenadores podem desmutar todos os usuários de uma vez.",
+    "notmuted": "/me [@%%NAME%%] Usuário mencionado não foi mutado.",
+    "unmuterank": "/me [@%%NAME%%] Você não pode desmutar usuários do mesmo rank ou superior.",
+    "commandscd": "/me [@%%NAME%%] O tempo de espera de comandos para usuários agora é %%TIME%% segundos.",
     "voteratio": "/me [@%%NAME%%] @%%USERNAME%% ~ woots: ' + %%WOOT%% + ', mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
-    "website": "/me Please visit our website: %%LINK%%",
-    "youtube": "/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
+    "website": "/me Visite nosso site: %%LINK%%",
+    "youtube": "/me [%%NAME%%] Inscreva-se no nosso canal: %%LINK%%",
     "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
+
 }
