--- a/lang/en.json
+++ b/lang/en.json
@@ -133,5 +133,6 @@
     "website": "/me Visite nosso site: %%LINK%%",
     "youtube": "/me [%%NAME%%] Inscreva-se no nosso canal: %%LINK%%",
     "songstatistics": "/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W/%%GRABS%%G/%%MEHS%%M."
+    "gozar": "/me @%%NAME%% AHHHHH VAI GOZAAAAAR"
 
 }
