--- a/lang/en.json
+++ b/lang/en.json
@@ -1,22 +1,22 @@
 {
     
-    "nodatafound": "Dados anteriores não encontrados nessa porra.",
-    "retrievingdata": "Recuperando dados armazenados anteriormente. karaio",
+    "nodatafound": "Dados anteriores não encontrados nesse lixo do cacete.",
+    "retrievingdata": "Recuperando dados armazenados anteriormente nesse inferno, karaio",
     "datarestored": "Dados armazenados anteriormente recuperados com êxito PORRAAAA.",
     "greyuser": "Apenas Seguranças ou superiores podem usar o chatbot seu merda.",
     "bouncer": "O chatbot não pode mover pessoas na fila de espera quando usado por um segurança viadão.",
     "online": "/me %%BOTNAME%% v%%VERSION%% CHEGOU PRA COMER SEU CU SEU ARROMBADO!",
 
 
-    "welcome": "Bem vindo(a) %%NAME%% seu gostosão",
+    "welcome": "Bem vindo(a) %%NAME%% seu diliçinha :blue_heart: :blue_heart: ",
     "welcomeback": "Bem vindo(a) de volta, %%NAME%%",
-    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás. :repeat:",
-    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos. Você não pode tocar algo longo PORRA.",
+    "songknown": "/me :repeat: essa porra de video foi tocado %%PLAYS%% vez(es) nos últimos %%TIMETOTAL%%. Última vez: %%LASTTIME%% atrás, olhe o historico ou veja o nome vermelho do video antes de repetir :repeat:",
+    "timelimit": "@%%NAME%%, sua música tem duração superior a %%MAXLENGTH%% minutos PORRA. Você não pode tocar algo longo assim cacete.",
     "permissionownsong": "/me :up: @%%NAME%% tem permissão para tocar um video criado por ele!",
     "isblacklisted": "/me Essa música está na lista negra %%BLACKLIST%%! Pulando música...",
 
 
-    "isopen": "/me A roleta COMEÇOU CARALHO! Use !join para entrar nessa PORRA SEU FILHO DA PUTA!",
+    "isopen": "/me A roleta COMEÇOU SEU FILHO DA PUTA DO CARALHO! Use !join para entrar nessa PORRA SEU FILHO DA PUTA!",
     "winnerpicked": "/me UM FILHO DA PUTA FOI ESCOLHIDO! @%%NAME%% ganhou a posição %%POSITION%% KARAIO.",
 
 
@@ -28,7 +28,7 @@
     "notdisconnected": "/me @%%NAME%% não caiu quando estive nesse caraio.",
     "noposition": "/me Última posição não reconhecida. A fila de espera precisa ser atualizada pelo menos uma vez para registrar posições.",
     "toolongago": "/me @%%NAME%%'s desconectou-se a muito tempo atrás PORRA, TÁ DE SACANAGEM NÉ KARAIO?: %%TIME%%.",
-    "valid": "/me @%%NAME%% foi dar a bunda á %%TIME%% atrás e deve ter posição %%POSITION%% nessa caraia.",
+    "valid": "/me @%%NAME%% foi dar a bunda à %%TIME%% atrás e deve ter posição %%POSITION%% nessa caraia.",
 
 
     "warning1": "@%%NAME%%, você esteve inativo por %%TIME%%, responda dentro de 2 minutos ou você será removido da fila de espera.",
@@ -43,19 +43,19 @@
     "adfly": "@%%NAME%%, mude de autowoot seu kawaiizudo :heart: recomendamos o Origem woot http://goo.gl/iubHkn",
 
 
-    "invalidtime": "/me [@%%NAME%%] Tempo inválido.",
-    "nouserspecified": "/me [@%%NAME%%] Usuário não especificado.",
-    "invaliduserspecified": "/me [@%%NAME%%] Usuário inválido.",
-    "nolistspecified": "/me [@%%NAME%%] Lista não especificada.",
-    "invalidlistspecified": "/me [@%%NAME%%] Lista inválida.",
-    "novaliduserspecified": "/me [@%%NAME%%] Usuário especificado não válido.",
-    "nolimitspecified": "/me [@%%NAME%%] Limite não especificado.",
-    "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido.",
-    "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida.",
-    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado.",
-    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado.",
-    "afkremoval": "Remoção de AFK",
-    "afksremoved": "AFKs removidos",
+    "invalidtime": "/me [@%%NAME%%] Tempo inválido caralho.",
+    "nouserspecified": "/me [@%%NAME%%] Usuário não especificado caralho.",
+    "invaliduserspecified": "/me [@%%NAME%%] Usuário inválido caralho.",
+    "nolistspecified": "/me [@%%NAME%%] Lista não especificada caralho.",
+    "invalidlistspecified": "/me [@%%NAME%%] Lista inválida caralho.",
+    "novaliduserspecified": "/me [@%%NAME%%] Usuário especificado não válido caralho.",
+    "nolimitspecified": "/me [@%%NAME%%] Limite não especificado caralho.",
+    "invalidlimitspecified": "/me [@%%NAME%%] Limite inválido caralho.",
+    "invalidpositionspecified": "/me [@%%NAME%%] Posição inválida PORRA.",
+    "toggleon": "/me [@%%NAME%%] %%FUNCTION%% ativado PORRAAAAA.",
+    "toggleoff": "/me [@%%NAME%%] %%FUNCTION%% desativado merda.",
+    "afkremoval": "Remoção de AFK DESSE INFERNO PORRA",
+    "afksremoved": "AFKs removidos, chupa seus viados",
     "afklimit": "Limite AFK",
     "autoskip": "autoskip",
     "newblacklisted": "/me [@%%NAME%%] Essa música está na lista negra %%BLACKLIST%%! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
@@ -79,7 +79,7 @@
     "chatcleared": "/me [@%%NAME%%] O chat foi limpo com o cu de algum vassilau.",
     "deletechat": "/me [@%%NAME%%] O chat de %%USERNAME%% foi limpo com o cu dele.",
     "commandslink": "/me Comandos do %%BOTNAME%%: http://goo.gl/0DT5RC",
-    "eatcookie": "/me ama biscoitos esse arrombado.",
+    "eatcookie": "/me Tem de mencionar alguém arrombado.",
     "nousercookie": "/em Não vejo %%NAME%% na sala. Vou comer esse biscoito sozinho.",
     "selfcookie": "/me @%%NAME%%, você é mesquinho, né? Dando cookies a si mesmo, bah. Compartilhe um pouco com os outros!",
     "cookie": "/me @%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
@@ -87,36 +87,36 @@
     "dclookuprank": "/me [@%%NAME%%] Somente Seguranças ou superiores podem usar !dclookup em outros usuários.",
     "emojilist": "/me Emojis: %%LINK%%",
     "notinwaitlist": "@%%NAME%%, você não está na lista de espera.",
-    "eta": "/me @%%NAME%% você tocará em aproximadamente %%TIME%% nessa bagaça.",
+    "eta": "/me @%%NAME%% irão ver sua bunda peluda em aproximadamente %%TIME%% nessa bagaça.",
     "facebook": "/me Curta nossa a porra da nossa página no Facebook: %%LINK%%",
-    "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj: %%LINK%%",
-    "roulettejoin": "/me @%%NAME%% entrou na roleta! (Use !leave para sair da mesma.)",
+    "starterhelp": "/me Essa imagem te ajudará a usar e entender o plug.dj sua nova bicha: %%LINK%%",
+    "roulettejoin": "/me @%%NAME%% entrou na porra da roleta! (Use !leave para desistir seu viadinho.)",
     "jointime": "/me [@%%NAMEFROM%%] @%%USERNAME%% esteve nessa delicia por %%TIME%%.",
     "kickrank": "/me [@%%NAME%%] Você não pode kickar alguém do mesmo rank ou superior!",
     "kick": "[@%%NAME%%], @%%USERNAME%% você está sendo kickado da comunidade por %%TIME%% minutos.",
     "kill": "/me Eu voltarei, e vou comer seu cu com sal seu arromba...do.............",
-    "rouletteleave": "/me @%%NAME%% desistiu da roleta!",
-    "songlink": "/me [@%%NAME%%] Link para a música atual: %%LINK%%",
-    "usedlockskip": "/me [%%NAME%% usou 'lockskip'.]",
+    "rouletteleave": "/me @%%NAME%% desistiu da roleta! esse boiolinha",
+    "songlink": "/me [@%%NAME%%] Link para o lixo atual: %%LINK%%",
+    "usedlockskip": "/me [%%NAME%% usou 'lockskip', é super efetivo neste tipo de pokemon.]",
     "lockskippos": "/me [@%%NAME%%] Lockskip está agora movendo para a posição %%POSITION%%.",
     "lockguardtime": "/me [@%%NAME%%] A proteção de travamento agora é %%TIME%% minuto(s).",
     "maxlengthtime": "/me [@%%NAME%%] A duração máxima de tempo agora é %%TIME%% minutos.",
     "motdset": "/me Mensagem do Dia:  %%MSG%%",
     "motdintervalset": "/me Intervalo da Mensagem do Dia: %%INTERVAL%% músicas.",
     "addbotwaitlist": "/me @%%NAME%%, não tente me adicionar à fila de espera, FILHO DA PUTA.",
-    "move": "/me [%%NAME%% usou 'move', é super efetivo.]",
+    "move": "/me [%%NAME%% usou 'move', é super efetivo neste tipo de pokemon.]",
     "mutednotime": "/me [@%%NAME%%] @%%USERNAME%% mutado.",
-    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos.",
-    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s).",
-    "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado.",
-    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior.",
+    "mutedmaxtime": "/me [@%%NAME%%] Você só pode mutar até no máximo %%TIME%% minutos SEU GAY.",
+    "mutedtime": "/me [@%%NAME%%] @%%USERNAME%% mutado por %%TIME%% minuto(s), SE FUDEU VACILÃO.",
+    "unmuted": "/me [@%%NAME%%] @%%USERNAME%% desmutado, faz merda de novo pra você ver.",
+    "muterank": "/me [@%%NAME%%] Você não pode mutar usuários do mesmo nível ou superior seu fi do exu.",
     "oplist": "/me Lista OP: %%LINK%%",
     "pong": "/me Pong NO TEU CU SEU FILHO DA PUTA!",
-    "reload": "/me Reiniciando, mas primeiro vou dar o cu...",
+    "reload": "/me Reiniciando, quando voltar como o teu cu...",
     "removenotinwl": "/me [@%%NAME%%] Usuário @%%USERNAME%% não está na porra da fila.",
-    "roomrules": "/me Encontre as regras da sala aqui: %%LINK%%",
+    "roomrules": "/me Encontre as regras desta peste aqui sinhô: %%LINK%%",
     "sessionstats": "/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
-    "skip": "/me [%%NAME%% usou 'skip', é super efetivo.]",
+    "skip": "/me [%%NAME%% usou 'skip', é super efetivo neste tipo de Pokemon!.]",
     "madeby": "/me Este bot foi feito por %%NAME%%.",
     "activefor": "Estive online por %%TIME%%.",
     "swapinvalid": "/me [@%%NAME%%] Usuário inválido.",
